--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   ],
   "dependencies": {
     "react": "16.8.3",
-    "react-native": "0.59.2"
+    "react-native": "0.59.2",
+    "react-native-device-info": "^1.4.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -44,6 +45,7 @@
     "jest-cli": "^24.5.0",
     "metro-react-native-babel-preset": "^0.53.1",
     "pre-push": "^0.1.1",
+    "react-native-config": "^0.11.7",
     "react-test-renderer": "16.8.3"
   },
   "jest": {
