--- a/package.json
+++ b/package.json
@@ -13,9 +13,20 @@
     "gitcount"
   ],
   "dependencies": {
+    "apollo-cache-inmemory": "^1.5.1",
+    "apollo-client": "^2.5.1",
+    "apollo-link-http": "^1.5.14",
+    "graphql": "^14.2.0",
+    "graphql-tag": "^2.10.1",
+    "idx": "^2.5.5",
     "react": "16.8.3",
+    "react-apollo": "^2.5.3",
+    "react-art": "^16.8.6",
     "react-native": "0.59.2",
-    "react-native-device-info": "^1.4.1"
+    "react-native-device-info": "^1.4.1",
+    "react-native-gesture-handler": "^1.1.0",
+    "react-native-screens": "^1.0.0-alpha.22",
+    "react-navigation": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.4.0",
@@ -43,8 +54,11 @@
     "flow-bin": "^0.95.1",
     "jest": "^24.5.0",
     "jest-cli": "^24.5.0",
+    "jest-haste-map": "^24.5.0",
+    "jest-resolve": "^24.5.0",
     "metro-react-native-babel-preset": "^0.53.1",
     "pre-push": "^0.1.1",
+    "prop-types": "^15.7.2",
     "react-native-config": "^0.11.7",
     "react-test-renderer": "16.8.3"
   },
