--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "react-art": "^16.8.6",
     "react-native": "0.59.2",
     "react-native-device-info": "^1.4.1",
+    "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
+    "react-native-linear-gradient": "^2.5.4",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-navigation": "^3.5.1"
   },
