--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "graphql": "^14.2.0",
     "graphql-tag": "^2.10.1",
     "idx": "^2.5.5",
+    "moment": "^2.24.0",
     "react": "16.8.3",
     "react-apollo": "^2.5.3",
     "react-art": "^16.8.6",
