--- a/package.json
+++ b/package.json
@@ -21,15 +21,17 @@
     "graphql-tag": "^2.10.1",
     "idx": "^2.5.5",
     "moment": "^2.24.0",
-    "react": "16.8.3",
+    "react": "^16.8.6",
     "react-apollo": "^2.5.3",
     "react-art": "^16.8.6",
-    "react-native": "0.59.2",
+    "react-dom": "^16.8.6",
+    "react-native": "^0.59.3",
     "react-native-device-info": "^1.4.1",
     "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-linear-gradient": "^2.5.4",
     "react-native-screens": "^1.0.0-alpha.22",
+    "react-native-web": "^0.11.2",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
