--- a/package.json
+++ b/package.json
@@ -30,12 +30,13 @@
     "react-native-fontawesome": "^6.0.1",
     "react-native-gesture-handler": "^1.1.0",
     "react-native-linear-gradient": "^2.5.4",
+    "react-native-permissions": "^1.1.1",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-web": "^0.11.2",
     "react-navigation": "^3.5.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.4.0",
+    "@babel/core": "^7.4.3",
     "@babel/plugin-transform-flow-strip-types": "^7.4.0",
     "@babel/plugin-transform-modules-commonjs": "^7.4.0",
     "@babel/runtime": "^7.4.2",
