--- a/package.json
+++ b/package.json
@@ -14,15 +14,13 @@
     "gitcount"
   ],
   "dependencies": {
-    "apollo-cache-inmemory": "^1.5.1",
-    "apollo-client": "^2.5.1",
-    "apollo-link-http": "^1.5.14",
+    "apollo-boost": "^0.3.1",
     "graphql": "^14.2.0",
     "graphql-tag": "^2.10.1",
     "idx": "^2.5.5",
     "moment": "^2.24.0",
     "react": "^16.8.6",
-    "react-apollo": "^2.5.3",
+    "react-apollo": "^2.5.2",
     "react-art": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-native": "^0.59.3",
