--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-native-permissions": "^1.1.1",
     "react-native-screens": "^1.0.0-alpha.22",
     "react-native-web": "^0.11.2",
+    "react-native-webview": "^5.7.0",
     "react-navigation": "^3.5.1",
     "react-redux": "^6.0.1",
     "redux": "^4.0.1",
